# adventofCode

./: .gitignore  readMe.md
2015/aoc2015/: Cargo.toml  output  thinking.norg
2015/aoc2015/input/: baby
2015/aoc2015/prompt/: prompt1.md  prompt10.md  prompt11.md  prompt12.md  prompt13.md  prompt14.md  prompt15.md  prompt16.md  prompt17.md  prompt18.md  prompt19.md  prompt2.md  prompt20.md  prompt21.md  prompt22.md  prompt23.md  prompt24.md  prompt25.md  prompt3.md  prompt4.md  prompt5.md  prompt6.md  prompt7.md  prompt8.md  prompt9.md
2015/aoc2015/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  gates.rs  rpggame.rs  rpggamemagic.rs
2016/aoc2016/: Cargo.toml  baby  output
2016/prompt/: prompt10.md  prompt11.md  prompt12.md  prompt2.md  prompt6.md  prompt7.md  prompt8.md  prompt9.md
2016/python/: day6.py
2016/rust/: Cargo.toml  brainstorming.norg
2016/rust/prompt/: prompt3.md  prompt6.md
2016/rust/src/: day10.rs  day11.rs  day12.rs  day2.rs  day3.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lcdscreen.rs  lib.rs  monorail.rs  radiology.rs  robots.rs
2022/day1/: day1_part1.cpp  day1_part2.cpp  puzzle.md
2022/day10/: part1.cpp  part2.cpp
2022/day11/: part1.cpp  part2.cpp
2022/day12/: part1.cpp  part2.cpp
2022/day13/: part1.cpp
2022/day2/: part1.cpp  part2.cpp  sample
2022/day3/: part1.cpp  part2.cpp
2022/day4/: part1.py  part2.py
2022/day5/: part1.cpp  part2.cpp  sample
2022/day6/: part1.cpp  part2.cpp
2022/day7/: Makefile  part1.cpp  part2.cpp
2022/day8/: part1.cpp  part2.cpp  sample
2022/day9/: part1.cpp  (+2 more)
(+53 files in other folders)
