[package]
name = "aoc2015"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
fancy-regex = "0.11.0"
serde_json = "1.0.105"
permutohedron = "0.2.4"

[[bin]]
name='day1'
path = 'src/day1.rs'

[[bin]]
name = 'day2'
path = 'src/day2.rs'

[[bin]]
name = 'day3'
path = 'src/day3.rs'

[[bin]]
name = 'day4'
path = 'src/day4.rs'

[[bin]]
name = 'day5'
path = 'src/day5.rs'

[[bin]]
name = 'day6'
path = 'src/day6.rs'

[[bin]]
name = 'day7'
path = 'src/day7.rs'

[[bin]]
name = 'day8'
path = 'src/day8.rs'

[[bin]]
name = 'day9'
path = 'src/day9.rs'

[[bin]]
name = 'day10'
path = 'src/day10.rs'

[[bin]]
name = 'day11'
path = 'src/day11.rs'

[[bin]]
name = 'day12'
path = 'src/day12.rs'

[[bin]]
name = 'day13'
path = 'src/day13.rs'

[[bin]]
name = 'day14'
path = 'src/day14.rs'

[[bin]]
name = 'day15'
path = 'src/day15.rs'
